--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,17 +1,8 @@
-name: CI Pipeline
- 
-on: [push, pull_request]
- 
+name: hello-world
+on: push
 jobs:
-  build:
+  my-job:
     runs-on: ubuntu-latest
- 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
- 
-      - name: Install dependencies
-        run: npm install
- 
-      - name: Run tests
-        run: npm test
+      - name: my-step
+        run: echo "Hello World!"
