Updating validate yml file

--- a/.github/workflows/validate-actions.yml
+++ b/.github/workflows/validate-actions.yml
@@ -4,12 +4,11 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - '**/*.yml'
-      - '**/*.yaml'
+      - '.github/workflows/test.yml'
   pull_request:
     paths:
-      - '**/*.yml'
-      - '**/*.yaml'
+      - '.github/workflows/test.yml'
+  
 
 jobs:
   validate-yaml:
