--- a/.github/workflows/validate-actions.yml
+++ b/.github/workflows/validate-actions.yml
@@ -23,5 +23,7 @@ jobs:
         uses: GrantBirki/json-yaml-validate@v3
         with:
           comment: true     # Adds a PR comment if invalid
+          include: ".github/workflows/my-workflow.yml"
+          exclude: "**/*.yaml **/*.yml"
           base_dir: "."     # Validate all YAML files in the repo
 
